--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <hr>
     <h2>Contact.</h2>
     <div id="contact">
-      <p class="intro">I'm open for work. Feel free to contact me, whether you have a question, want to start an adventure together or just want to say hi, I'll try my best to get back to you!</p>
+      <p class="intro">I'm open to work. Feel free to contact me, whether you have a question, want to start an adventure together or just want to say hi, I'll try my best to get back to you!</p>
       <a href="mailto:jonial92@gmail.com" class="btn btn-outline-primary btn-lg">Contact Me</a>
     </div>
   </div>
