--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               Menu
             </a>
 
-            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu dropdown-menu-end dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="#about">About</a></li>
               <li><a class="dropdown-item" href="#skills">Skills</a></li>
               <li><a class="dropdown-item" href="#contact">Contact</a></li>
